--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
    <script>
       if ($(window).width() < 1181) {
          alert(
-            'Warning: this site isn\'t yet optimized for smaller screens. For a better experience, please visit it on a computer. Sorry for the inconvenience!');
+            'Warning: this site isn\'t yet optimized for smaller screens. For a better experience, please visit it on a computer. Sorry for the inconvenience!'
+            );
       }
    </script>
 </head>
@@ -56,7 +57,11 @@
       data-aos="fade-down">
       <div class="container">
          <a href="#">
-            <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
+            <b class="navbar-brand p2p" href="#top"><b></b>
+               <r>R</r>
+               <g>G</g>
+               <bl>B</bl>Hack
+            </b>
          </a>
          </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -240,17 +245,17 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.linkedin.com/in/raadwan-masum-9147bb1a5/" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
-                                       xmlns="http://www.w3.org/2000/svg">
+                                 <a href="https://www.linkedin.com/in/raadwan-masum-9147bb1a5/" target="_blank"><svg
+                                       height="24" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
                                        </path>
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://devpost.com/raad1masum" target="_blank"><svg height="30" id="Layer_1" version="1.1"
-                                       viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
-                                       y="0px">
+                                 <a href="https://devpost.com/raad1masum" target="_blank"><svg height="30" id="Layer_1"
+                                       version="1.1" viewbox="0 0 280.3 242" width="30" x="0px"
+                                       xmlns="http://www.w3.org/2000/svg" y="0px">
                                        <g id="XMLID_1_">
                                           <path
                                              d="M133.7,76H118v90h14.7c30.9,0,45.1-18.1,45.1-45C177.8,90.9,164.9,76,133.7,76z"
@@ -262,8 +267,8 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://github.com/raad1masum" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
-                                       width="24" xmlns="http://www.w3.org/2000/svg">
+                                 <a href="https://github.com/raad1masum" target="_blank"><svg height="24" role="img"
+                                       viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
                                        </title>
@@ -277,8 +282,10 @@
                      </table>
                   </div>
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
-                     viverra sapien congue sem scelerisque.
+                     I'm Raadwan Masum, but I go by "Gravity" and "SamosaSauce" online. I
+                     do everything from cybersecurity and hackathons to robotics and
+                     competitive programming. Computers, mathematics, and science help explain the world around me,
+                     I don't know what I would do without them..
                   </p>
 
 
@@ -297,17 +304,17 @@
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://www.linkedin.com/in/safin-singh-b2630918a/" target="_blank"><svg height="24" viewbox="0 0 24 24" width="24"
-                                       xmlns="http://www.w3.org/2000/svg">
+                                 <a href="https://www.linkedin.com/in/safin-singh-b2630918a/" target="_blank"><svg
+                                       height="24" viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <path
                                           d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
                                        </path>
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://devpost.com/safinsingh" target="_blank"><svg height="30" id="Layer_1" version="1.1"
-                                       viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
-                                       y="0px">
+                                 <a href="https://devpost.com/safinsingh" target="_blank"><svg height="30" id="Layer_1"
+                                       version="1.1" viewbox="0 0 280.3 242" width="30" x="0px"
+                                       xmlns="http://www.w3.org/2000/svg" y="0px">
                                        <g id="XMLID_1_">
                                           <path
                                              d="M133.7,76H118v90h14.7c30.9,0,45.1-18.1,45.1-45C177.8,90.9,164.9,76,133.7,76z"
@@ -319,8 +326,8 @@
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://github.com/safinsingh" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
-                                       width="24" xmlns="http://www.w3.org/2000/svg">
+                                 <a href="https://github.com/safinsingh" target="_blank"><svg height="24" role="img"
+                                       viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
                                        </title>
@@ -381,9 +388,9 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                  </a>
                               </td>
                               <td>
-                                 <a href="https://devpost.com/rohanj2006" target="_blank"><svg height="30" id="Layer_1" version="1.1"
-                                       viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
-                                       y="0px">
+                                 <a href="https://devpost.com/rohanj2006" target="_blank"><svg height="30" id="Layer_1"
+                                       version="1.1" viewbox="0 0 280.3 242" width="30" x="0px"
+                                       xmlns="http://www.w3.org/2000/svg" y="0px">
                                        <g id="XMLID_1_">
                                           <path
                                              d="M133.7,76H118v90h14.7c30.9,0,45.1-18.1,45.1-45C177.8,90.9,164.9,76,133.7,76z"
@@ -395,8 +402,8 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                                     </svg></a>
                               </td>
                               <td>
-                                 <a href="https://github.com/rjawesome" target="_blank"><svg height="24" role="img" viewbox="0 0 24 24"
-                                       width="24" xmlns="http://www.w3.org/2000/svg">
+                                 <a href="https://github.com/rjawesome" target="_blank"><svg height="24" role="img"
+                                       viewbox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                                        <title>
                                           GitHub icon
                                        </title>
@@ -430,9 +437,9 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         <tbody>
                            <tr>
                               <td>
-                                 <a href="https://devpost.com/aaditgupta21" target="_blank"><svg height="30" id="Layer_1" version="1.1"
-                                       viewbox="0 0 280.3 242" width="30" x="0px" xmlns="http://www.w3.org/2000/svg"
-                                       y="0px">
+                                 <a href="https://devpost.com/aaditgupta21" target="_blank"><svg height="30"
+                                       id="Layer_1" version="1.1" viewbox="0 0 280.3 242" width="30" x="0px"
+                                       xmlns="http://www.w3.org/2000/svg" y="0px">
                                        <g id="XMLID_1_">
                                           <path
                                              d="M133.7,76H118v90h14.7c30.9,0,45.1-18.1,45.1-45C177.8,90.9,164.9,76,133.7,76z"
@@ -498,8 +505,8 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </a>
                      </td>
                      <td>
-                        <a href="https://github.com/RGBHack" target="_blank"><svg height="30" role="img" viewbox="0 0 24 24" width="30"
-                              xmlns="http://www.w3.org/2000/svg">
+                        <a href="https://github.com/RGBHack" target="_blank"><svg height="30" role="img"
+                              viewbox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg">
                               <title>
                                  GitHub icon
                               </title>
