fix font size for teams

--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
                         </tbody>
                      </table>
                   </div>
-                  <p>
+                  <p style="font-size: 1.7vh;">
                      I'm Raadwan Masum, but I go by "Gravity" and "SamosaSauce" online. I
                      do everything from cybersecurity and hackathons to robotics and
                      competitive programming. Computers, mathematics, and science help explain the world around me,
-                     I don't know what I would do without them..
+                     I don't know what I would do without them.
                   </p>
 
 
@@ -340,7 +340,7 @@
                         </tbody>
                      </table>
                   </div>
-                  <p>
+                  <p style="font-size: 1.7vh;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
@@ -416,7 +416,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </tbody>
                      </table>
                   </div>
-                  <p>
+                  <p style="font-size: 1.7vh;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
@@ -465,7 +465,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </tbody>
                      </table>
                   </div>
-                  <p>
+                  <p style="font-size: 1.7vh;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
