--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         </tbody>
                      </table>
                   </div>
-                  <p style="font-size: 1.7vh;">
+                  <p style="font-size: 1.7vh; margin-top: 0;">
                      I'm Raadwan Masum, but I go by "Gravity" and "SamosaSauce" online. I
                      do everything from cybersecurity and hackathons to robotics and
                      competitive programming. Computers, mathematics, and science help explain the world around me,
@@ -340,7 +340,7 @@
                         </tbody>
                      </table>
                   </div>
-                  <p style="font-size: 1.7vh;">
+                  <p style="font-size: 1.7vh; margin-top: 0;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
@@ -416,7 +416,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </tbody>
                      </table>
                   </div>
-                  <p style="font-size: 1.7vh;">
+                  <p style="font-size: 1.7vh; margin-top: 0;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
@@ -465,7 +465,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                         </tbody>
                      </table>
                   </div>
-                  <p style="font-size: 1.7vh;">
+                  <p style="font-size: 1.7vh; margin-top: 0;">
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
                      viverra sapien congue sem scelerisque.
                   </p>
