--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 
                   <div class="container">
-                     <table class="table" style="text-align: center;">
+                     <table class="table" style="text-align: center; margin-bottom: 0;">
                         <tbody>
                            <tr>
                               <td>
@@ -300,7 +300,7 @@
 
 
                   <div class="container">
-                     <table class="table" style="text-align: center;">
+                     <table class="table" style="text-align: center; margin-bottom: 0;">
                         <tbody>
                            <tr>
                               <td>
@@ -357,7 +357,7 @@
 
 
                   <div class="container">
-                     <table class="table" style="text-align: center;">
+                     <table class="table" style="text-align: center; margin-bottom: 0;">
                         <tbody>
                            <tr>
                               <td>
@@ -433,7 +433,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
 
 
                   <div class="container">
-                     <table class="table" style="text-align: center;">
+                     <table class="table" style="text-align: center; margin-bottom: 0;">
                         <tbody>
                            <tr>
                               <td>
