--- a/index.html
+++ b/index.html
@@ -337,8 +337,7 @@
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
-                     viverra sapien congue sem scelerisque.
+                     Hi! My name is Safin Singh. I'm an 8th grade student with a passion for cybersecurity, ethical hacking, math, and problem solving. I love working with Linux, programming with Python + Go, and full-stack development with React Native!
                   </p>
 
 
