--- a/index.html
+++ b/index.html
@@ -461,8 +461,10 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra dolor quis egestas auctor. Sed
-                     viverra sapien congue sem scelerisque.
+                     Hi! I'm Aadit Gupta. I am a High School Student who loves to code and build. I hope someday
+               my projects will be able to help people in any way possible. I compete in many competitions 
+               such as CyberPatriot, Hackathons, FIRST, and CTF's. From these competitions I have learned many
+               new skills that I hope to pass on.  
                   </p>
 
 
