--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     Hi, I'm a high school student who loves to do Math, Competitive Programming, Software Development, Robotics, and CyberSecurity. I compete in many competitions including CyberPatriot, USACO, FTC, and numerous Hackathons.
+                     Hi, I'm a high school student who loves to do Math, Competitive Programming, Software Development, Robotics, and CyberSecurity. I compete in many competitions including CyberPatriot, USACO, FTC, and numerous Hackathons. In addition, I have made many projects, including an app on the Play Store.
                   </p>
 
 
