--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     I'm Raadwan Masum, but I go by "Gravity" and "SamosaSauce" online. I
+                     Hi, I'm Raadwan Masum, but I go by "Gravity" and "SamosaSauce" online. I
                      do everything from cybersecurity and robotics to web development and
                      competitive programming. Computers, mathematics, and science help explain the world around me,
                      I don't know what I would do without them.
