--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       if ($(window).width() < 1181) {
          alert(
             'Warning: this site isn\'t yet optimized for smaller screens. For a better experience, please visit it on a computer. Sorry for the inconvenience!'
-            );
+         );
       }
    </script>
 </head>
@@ -57,7 +57,11 @@
       data-aos="fade-down">
       <div class="container">
          <a href="#">
-            <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
+            <b class="navbar-brand p2p" href="#top"><b></b>
+               <r>R</r>
+               <g>G</g>
+               <bl>B</bl>Hack
+            </b>
          </a>
          </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -337,7 +341,9 @@
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     Hi! My name is Safin Singh. I'm an 8th grade student with a passion for cybersecurity, ethical hacking, math, and problem solving. I love working with Linux, programming with Python + Go, and full-stack development with React Native!
+                     Hi! My name is Safin Singh. I'm an 8th grade student with a passion for cybersecurity, ethical
+                     hacking, math, and problem solving. I love working with Linux, programming with Python + Go, and
+                     full-stack development with React Native!
                   </p>
 
 
@@ -412,7 +418,9 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                      </table>
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
-                     Hi, I'm a high school student who loves to do Math, Competitive Programming, Software Development, Robotics, and CyberSecurity. I compete in many competitions including CyberPatriot, USACO, FTC, and numerous Hackathons. In addition, I have made many projects, including an app on the Play Store.
+                     Hi, I'm a high school student who loves to do Math, Competitive Programming, Software Development,
+                     Robotics, and CyberSecurity. I compete in many competitions including CyberPatriot, USACO, FTC, and
+                     numerous Hackathons. In addition, I have made many projects, including an app on the Play Store.
                   </p>
 
 
@@ -461,9 +469,9 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                   </div>
                   <p style="font-size: 1.7vh; margin-top: 0;">
                      Hi! I'm Aadit Gupta. I am a High School Student who loves to code and build. I hope someday
-               my projects will be able to help people in any way possible. I compete in many competitions 
-               such as CyberPatriot, Hackathons, FIRST, and CTF's. From these competitions I have learned many
-               new skills that I hope to pass on.  
+                     my projects will be able to help people in any way possible. I compete in many competitions
+                     such as CyberPatriot, Hackathons, FIRST, and CTF's. From these competitions I have learned many
+                     new skills that I hope to pass on.
                   </p>
 
 
