--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                </div>
                <div class="team-box"
                   style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;text-align:center !important"
-                  data-aos="fade-up-right">
+                  data-aos="fade-up-left">
                   <a style="color: black;">
                      <p class="pixel-font" style="text-align: center; font-size: 3vh;">Rohan<br>Juneja</p>
                   </a>
@@ -428,7 +428,7 @@ c281 14 555 104 974 321 99 52 797 428 1550 836 754 408 1808 979 2343 1268
                </div>
                <div class="team-box"
                   style="padding: 3vh; margin-top: 5vh; vertical-align: top; display: inline-block;text-align:center !important"
-                  data-aos="fade-up-right">
+                  data-aos="fade-up-left">
                   <a style="color: black;">
                      <p class="pixel-font" style="text-align: center; font-size: 3vh;">Aadit<br>Gupta</p>
                   </a>
