--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,11 @@
       data-aos="fade-down">
       <div class="container">
          <a href="#">
-            <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
+            <b class="navbar-brand p2p" href="#top"><b></b>
+               <r>R</r>
+               <g>G</g>
+               <bl>B</bl>Hack
+            </b>
          </a>
          </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -193,20 +197,7 @@
                <p class="title">Projects</p>
             </div>
             <div class="content-div">
-               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
-                  <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                     <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
-                  </a>
-                  <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app. Renders
-                     iframes to show multiple web pages in the one page. Features: Calendar, Tasks, Team Administration,
-                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards.</p>
-                  <a href="https://github.com/RGBHack/Spark" target="_blank">
-                     <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
-                        <use xlink:href="#github-icon"></use>
-                     </svg>
-                  </a>
-               </div>
-               <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
+               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-left">
                   <a style="color: black; text-decoration: underline;" href="https://alzheimersai.tk/" target="_blank">
                      <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
                   </a>
@@ -214,6 +205,19 @@
                      Alzheimer's disease using AI. Best Social Good Award at 2020 StanHacks 2 Hackathon, Best Use of
                      Google Cloud Award and Honorable Mention at 2020 HackDSC Hackathon.</p>
                   <a href="https://github.com/RGBHack/AlzheimersAI" target="_blank">
+                     <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <use xlink:href="#github-icon"></use>
+                     </svg>
+                  </a>
+               </div>
+               <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-right">
+                  <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                     <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                  </a>
+                  <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app.
+                     Features: Calendar, Tasks, Team Administration,
+                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards. Wolfram Award at 2020 Harmony Hacks.</p>
+                  <a href="https://github.com/RGBHack/Spark" target="_blank">
                      <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                         <use xlink:href="#github-icon"></use>
                      </svg>
