--- a/public/index.html
+++ b/public/index.html
@@ -192,7 +192,7 @@
          </div>
       </div>
       <div class="content">
-         <div class="section" id="projects" style="padding-top: 15vh;">
+         <div class="section" id="projects" style="padding-top: 15vh; height: 150vh;">
             <div class="title-box" data-aos="fade-down">
                <p class="title">Projects</p>
             </div>
@@ -211,6 +211,19 @@
                   </a>
                </div>
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-right">
+                  <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
+                     <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                  </a>
+                  <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app.
+                     Features: Calendar, Tasks, Team Administration,
+                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards. Wolfram Award at 2020 Harmony Hacks.</p>
+                  <a href="https://github.com/RGBHack/Spark" target="_blank">
+                     <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
+                        <use xlink:href="#github-icon"></use>
+                     </svg>
+                  </a>
+               </div>
+               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-left">
                   <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
                      <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
                   </a>
