--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
                <p class="title">Projects</p>
             </div>
             <div class="content-div">
-               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-left">
+               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
                   <a style="color: black; text-decoration: underline;" href="https://alzheimersai.tk/" target="_blank">
                      <p class="pixel-font" style="text-align: left; font-size: 4vh;">AlzheimersAI</p>
                   </a>
@@ -210,7 +210,7 @@
                      </svg>
                   </a>
                </div>
-               <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-right">
+               <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
                   <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
                      <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
                   </a>
@@ -223,7 +223,7 @@
                      </svg>
                   </a>
                </div>
-               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-left">
+               <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
                   <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
                      <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
                   </a>
