--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,8 @@
                   </a>
                   <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app.
                      Features: Calendar, Tasks, Team Administration,
-                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards. Wolfram Award at 2020 Harmony Hacks.</p>
+                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards. Wolfram Award at 2020
+                     Harmony Hacks.</p>
                   <a href="https://github.com/RGBHack/Spark" target="_blank">
                      <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                         <use xlink:href="#github-icon"></use>
@@ -225,11 +226,11 @@
                </div>
                <div class="content-box" style="float: left; padding: 3vh;" data-aos="fade-up-right">
                   <a style="color: black; text-decoration: underline;" href="https://sparkapp.cf/" target="_blank">
-                     <p class="pixel-font" style="text-align: left; font-size: 4vh;">Spark</p>
+                     <p class="pixel-font" style="text-align: left; font-size: 4vh;">Fabric</p>
                   </a>
-                  <p style="font-size: 3.16vh; margin-bottom: 0;">An empowering all-in-one productivity web app.
-                     Features: Calendar, Tasks, Team Administration,
-                     Project Tracking, Messages, Meetings and Zoom Integration, Discussion Boards. Wolfram Award at 2020 Harmony Hacks.</p>
+                  <p style="font-size: 3.16vh; margin-bottom: 0;">Fabric is an engaging, lightweight, and secure
+                     classroom whiteboard for teachers and students alike. It uses Python Socket technology to enable
+                     communication between users and has a built-in profanity filter to maintain a safe environment.</p>
                   <a href="https://github.com/RGBHack/Spark" target="_blank">
                      <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                         <use xlink:href="#github-icon"></use>
