fix project link for fabric

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                   <p style="font-size: 3.16vh; margin-bottom: 0;">Fabric is an engaging, lightweight, and secure
                      classroom whiteboard for teachers and students alike. It uses Python Socket technology to enable
                      communication between users and has a built-in profanity filter to maintain a safe environment.</p>
-                  <a href="https://github.com/RGBHack/Spark" target="_blank">
+                  <a href="https://github.com/RGBHack/Fabric" target="_blank">
                      <svg class="icon" style="height: 5vh; width: 2vw; display: block; margin: 0 auto; float: right;">
                         <use xlink:href="#github-icon"></use>
                      </svg>
