--- a/public/index.html
+++ b/public/index.html
@@ -57,11 +57,7 @@
       data-aos="fade-down">
       <div class="container">
          <a href="#">
-            <b class="navbar-brand p2p" href="#top"><b></b>
-               <r>R</r>
-               <g>G</g>
-               <bl>B</bl>Hack
-            </b>
+            <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
          </a>
          </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
