--- a/public/index.html
+++ b/public/index.html
@@ -178,10 +178,8 @@
                   </div>
                </div>
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
-                  <p class="pixel-font" style="text-align: center; font-size: 4vh;">Latest Awards</p>
-                  <p style="font-size: 3vh;">Our most recent project was AlzheimersAI, a tracking and identification
-                     system for Alzheimer's Disease. We earned the Best Social Good Award at the 2020 StanHacks 2
-                     Hackathon and the Best Use of Google Cloud Award & Honorable Mention at the 2020 HackDSC Hackathon.
+                  <p class="pixel-font" style="text-align: center; font-size: 4vh;">Awards</p>
+                  <p style="font-size: 3vh;">
                   </p>
                </div>
             </div>
