create list for awards

--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,9 @@
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
                   <p class="pixel-font" style="text-align: center; font-size: 4vh;">Awards</p>
                   <p style="font-size: 3vh;">
+                     <ul class="award-list">
+                        <li></li>
+                     </ul>
                   </p>
                </div>
             </div>
