add new list award format

--- a/public/index.html
+++ b/public/index.html
@@ -179,11 +179,12 @@
                </div>
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
                   <p class="pixel-font" style="text-align: center; font-size: 4vh;">Awards</p>
-                  <p style="font-size: 3vh;">
                      <ul class="award-list">
-                        <li></li>
+                        <li>Wolfram Award at 2020 Harmony Hacks</li>
+                        <li>Best Use of Google Cloud Award at 2020 HackDSC Hackathon</li>
+                        <li>Honorable Mention at 2020 HackDSC Hackathon</li>
+                        <li>Best Social Good Award at 2020 StanHacks 2 Hackathon</li>
                      </ul>
-                  </p>
                </div>
             </div>
          </div>
