--- a/public/index.html
+++ b/public/index.html
@@ -166,6 +166,10 @@
                            <img class="d-block w-95 project-img" style="height: 54vh;"
                               src="./img/projects/alzheimersai_diagram.png" alt="Second slide">
                         </div>
+                        <div class="carousel-item">
+                           <img class="d-block w-95 project-img" style="height: 54vh;"
+                              src="./img/projects/spark.png" alt="Second slide">
+                        </div>
                      </div>
                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
