--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
                   <p class="pixel-font" style="text-align: center; font-size: 4vh;">Awards</p>
                      <ul class="award-list">
-                        <li>Wolfram Award at 2020 Harmony Hacks</li>
+                        <li>Wolfram Award at 2020 Harmony Hacks Hackathon</li>
                         <li>Best Use of Google Cloud Award at 2020 HackDSC Hackathon</li>
                         <li>Honorable Mention at 2020 HackDSC Hackathon</li>
                         <li>Best Social Good Award at 2020 StanHacks 2 Hackathon</li>
