--- a/public/index.html
+++ b/public/index.html
@@ -167,8 +167,8 @@
                               src="./img/projects/alzheimersai_diagram.png" alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                           <img class="d-block w-95 project-img" style="height: 54vh;"
-                              src="./img/projects/spark.png" alt="Second slide">
+                           <img class="d-block project-img" style="height: 54vh; width: 90%;"
+                              src="./img/projects/spark.png" alt="Third slide">
                         </div>
                      </div>
                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
