--- a/public/index.html
+++ b/public/index.html
@@ -170,6 +170,10 @@
                            <img class="d-block project-img" style="height: 54vh; width: 90%;"
                               src="./img/projects/spark.png" alt="Third slide">
                         </div>
+                        <div class="carousel-item">
+                           <img class="d-block w-90 project-img" style="height: 54vh;"
+                              src="./img/projects/spark_model.png" alt="Third slide">
+                        </div>
                      </div>
                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
