--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,11 @@
       data-aos="fade-down">
       <div class="container">
          <a href="#">
-            <b class="navbar-brand p2p" href="#top"><b></b><r>R</r><g>G</g><bl>B</bl>Hack</b>
+            <b class="navbar-brand p2p" href="#top"><b></b>
+               <r>R</r>
+               <g>G</g>
+               <bl>B</bl>Hack
+            </b>
          </a>
          </a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -187,12 +191,12 @@
                </div>
                <div class="content-box" style="float: right; padding: 3vh;" data-aos="fade-up-left">
                   <p class="pixel-font" style="text-align: center; font-size: 4vh;">Awards</p>
-                     <ul class="award-list">
-                        <li>Wolfram Award at 2020 Harmony Hacks Hackathon</li>
-                        <li>Best Use of Google Cloud Award at 2020 HackDSC Hackathon</li>
-                        <li>Honorable Mention at 2020 HackDSC Hackathon</li>
-                        <li>Best Social Good Award at 2020 StanHacks 2 Hackathon</li>
-                     </ul>
+                  <ul class="award-list">
+                     <li>Wolfram Award at 2020 Harmony Hacks Hackathon</li>
+                     <li>Best Use of Google Cloud Award at 2020 HackDSC Hackathon</li>
+                     <li>Honorable Mention at 2020 HackDSC Hackathon</li>
+                     <li>Best Social Good Award at 2020 StanHacks 2 Hackathon</li>
+                  </ul>
                </div>
             </div>
          </div>
