--- a/public/index.html
+++ b/public/index.html
@@ -156,6 +156,8 @@
                      <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                      </ol>
                      <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -172,7 +174,7 @@
                         </div>
                         <div class="carousel-item">
                            <img class="d-block w-90 project-img" style="height: 54vh;"
-                              src="./img/projects/spark_model.png" alt="Third slide">
+                              src="./img/projects/spark_model.png" alt="Fourth slide">
                         </div>
                      </div>
                      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
